fix pins visibility, add options

--- a/front/pages/summary.module.scss
+++ b/front/pages/summary.module.scss
@@ -20,8 +20,7 @@
 		width: 100%;
 
 		&_content {
-			display: flex;
-			justify-content: center;
+			@include flex-center-center;
 			flex-wrap: wrap;
 			width: 100%;
 			padding: 0 2.4rem;
